Recaptcha stuff in both index.html and firebase.js. Not tested, can be commented out if broken.

--- a/template/index.html
+++ b/template/index.html
@@ -22,6 +22,8 @@
     <!-- uncomment the below line for local development -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 
+    <script src="https://www.google.com/recaptcha/enterprise.js?render=6LeM5BwrAAAAACiRMi7fyG_43Qu6Mp6Xeh3saNkZ"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.18/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0/firebase.js"></script>
